--- a/index.html
+++ b/index.html
@@ -1,196 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>E-Commerce</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>E-Commerce</title>
+    </head>
 
+    <body>
+        <footer>
+            <div class="container">
+                <div class="footer-holder">
+                    <div>
+                        <img src="./images/logo.svg" alt="logo" />
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever.Since the 1500s,
+                            when an unknown printer.
+                        </p>
+                    </div>
 
-<body>
-   
+                    <div>
+                        <h4>Follow Us</h4>
+                        <p>Since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
+                    </div>
 
-<section>
-   <div class="container">
-       <div class="main-section-title">
-        <h2>BEST SELLER</h2>
-        <ul>
-            <li><a href="#">All</a></li>
-            <li><a href="#">Bags</a></li>
-            <li><a href="#"> Sneakers</a></li>
-            <li><a href="#"> Belt</a></li>
-            <li><a href="#">Sunglasses</a></li>
-        </ul>
-       </div>
+                    <div>
+                        <h4>Contact Us</h4>
+                        <p>E-Comm , 4578 Marmora Road, Glasgow D04 89GR</p>
+                        
+                    </div>
+                </div>
 
-        <div class="main-section-content">
+                <div class="footer-bot">
+                    <div>
+                        <p>© 2018 Ecommerce theme by www.bisenbaev.com</p>
+                    </div>
 
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img1.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
+                    <div>
+                        <img src="./images/Brands.png" alt="image">
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img2.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img3.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img4.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img5.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img6.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img7.png" width="264" height="272"  alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <div class="card-img">
-                <img src="./images/content-img8.png" width="264" height="272" alt="img">
-            </div>
-
-            <div class="card-items">
-                <p>Nike Air Max 270 React</p>
-                <img src="./images/stars.svg" alt="img">
-                <div class="card-price">
-                    <span>$299,43</span>
-                    <span>$534,33</span>
-                    <span>24% Off</span>
-                </div>
-            </div>
-        </div>
-
-        
-        </div>
-
-        <div class="main-section-btn">
-            <button>Learn More</button>
-        </div>
-
-        <div class="why-us">
-
-            <div class="shipping">
-                <div><img src="./images/shipping.svg" width="100" height="65" alt="image"></div>
-                <p >FREE SHIPPING</p>
-            </div>
-
-            <div class="shipping">
-                <div><img src="./images/refund.svg" width="100" height="65" alt="image"></div>
-                <p >100% REFUND</p>
-            </div>
-
-            <div class="shipping">
-                <div><img src="./images/support.svg" width="100" height="65" alt="image"></div>
-                <p >SUPPORT 24/7</p>
-            </div>
-
-        </div>
-
-        <form>
-            <div class="main-search">
-                <input type="text" placeholder="Search query . . .">
-                <button>Search</button>
-            </div>
-
-        </form>
-   </div>
-</section>    
-
-</body>
-
-
+        </footer>
+    </body>
 </html>
